--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+
 .canvas {
-    width: 45vw;
-    height: 45vw;
+    width: 40vw;
+    height: 40vw;
     margin: auto;
     border: 5px solid var(--main-color);
     border-radius: 10px;
